[project]
name = "agency"
version = "0.1.0"
description = ""
authors = [
    {name = "Anshul", email = "anshul1.chauhan@paytm.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.poetry.dependencies]
fastapi = "^0.115.8"
[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"